--- a/graduate2/.env_sample
+++ b/graduate2/.env_sample
@@ -1,9 +1,9 @@
-POSTGRES_DB=graduate
+POSTGRES_DB=grad
 POSTGRES_PASSWORD=12345
-POSTGRES_HOST=127.0.0.1 || db
+POSTGRES_HOST=db || 127.0.0.1
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
-POSTGRES_HOST_AUTH_METHOD=trust
+POSTGRES_HOST_AUTH_METHOD=md5
 DEBUG=True
 SECRET_KEY='django-insecure-)uk)(e#1_+ud)1_5lqbs507fjh0#1#+9c((hy$!ym3hp6^55_u'
 LANGUAGE_CODE=en-us
