--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     image: postgres:14-alpine3.17
     container_name: db_app
     user: postgres
-    env_file: ./graduate2/.env
+    env_file: your_opinion/.env
     volumes:
       - ./data/db:/var/lib/postgresql/data
     ports:
@@ -25,7 +25,7 @@ services:
     depends_on:
       db:
         condition: service_healthy
-    env_file: ./graduate2/.env
+    env_file: your_opinion/.env
     ports:
       - "8000:8000"
     volumes:
